--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="br.edu.ifspsaocarlos.agenda.activity.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="br.edu.ifspsaocarlos.agenda.activity.MainActivity">
     <item
         android:id="@+id/pesqContato"
-        app:showAsAction="ifRoom"
         android:title="@string/nome_do_contato"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        />
+        app:showAsAction="ifRoom|withText" />
+    <group android:id="@+id/grupo"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/mi_mostrar_favoritos"
+            android:title="@string/filtro_favoritos"
+            app:showAsAction="withText" />
+        <item
+            android:id="@+id/mi_mostrar_todos"
+            android:title="@string/filtro_todos"
+            android:checked="true"
+            app:showAsAction="withText" />
+    </group>
 </menu>
 
